--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ project.lock.json
 project.fragment.lock.json
 artifacts/
 .env
-
+database.json
+.env
 # .NET Core
 project.lock.json
 project.fragment.lock.json
